# dormatory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  HELP.md  LICENSE  MIGRATIONS.md  MIGRATION_SETUP_SUMMARY.md  Makefile  README.md  SUPABASE_SETUP.md  alembic.ini  main.py  manage_migrations.py  pyproject.toml  pytest.ini  server.py  setup_migrations.py
.github/workflows/: coverage-pages.yml  main.yml  test-and-coverage.yml  test.yml
alembic/: env.py
alembic/versions/: 5bc9c00dff11_initial_migration_create_all_tables.py
dormatory/api/: __init__.py  dependencies.py  main.py
dormatory/api/routes/: __init__.py  attributes.py  links.py  objects.py  permissions.py  types.py  versioning.py
dormatory/models/: __init__.py  database_config.py  dormatory_model.py
examples/: __init__.py  basic_usage.py  postgresql_migration_example.py
supabase/: config.toml
tests/: __init__.py  conftest.py  test_basic_api.py  test_db_setup.py  test_debug_db.py  test_simple_api.py  test_simple_db.py
tests/api/: __init__.py  test_attributes.py  test_links.py  test_main.py  test_objects.py  test_permissions.py  test_types.py  test_versioning.py
tests/unit/: __init__.py  test_hierarchy.py  test_models.py  test_validation.py
