[project]
name = "dormatory"
version = "0.1.0"
description = "A Python library for storing structured hierarchical data using a flat set of tables"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
